--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-astroid==2.5.3
+astroid==2.5.6
+colorama==0.4.4
 isort==5.8.0
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
-pylint==2.7.4
+pylint==2.8.1
 selenium==3.141.0
 toml==0.10.2
 urllib3==1.26.4
