--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,26 @@
+aiodns==3.0.0
+astroid==2.6.2
+cffi==1.14.6
+isort==5.9.2
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
+MosT==0.12
+packaging==21.0
+path==16.2.0
+path.py==12.5.0
+pexpect==4.8.0
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycall==2.3.2
+pycares==4.0.0
+pycparser==2.20
+pylint==2.9.3
+pyparsing==2.4.7
 selenium==3.141.0
-slixmpp~=1.7.1
+sip==6.1.1
+slixmpp==1.7.1
+toml==0.10.2
+urllib3==1.26.6
+wrapt==1.12.1
+xmpppy==0.6.2
