--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,7 @@ dmypy.json
 # Папка для загрузки файлов по FTP
 FTP_573/
 logs/
+logs_in_docx
 
 # Файлы с данными для подключения
 email_data.csv
